修改细节内容

--- a/src/main/resources/templates/page/en/index.html
+++ b/src/main/resources/templates/page/en/index.html
@@ -13,12 +13,10 @@ var _hmt = _hmt || [];
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
-  <meta name="shenma-site-verification" content="3f527c71e3b8bd47c35ed86f522b29af_1561971198"> 
-	<meta name="sogou_site_verification" content="hDnpiVhTgo"/>
-  <title>ICABST Home|Homepage--2019 International Conference On Advances in Biological Science and Technology(ICABST2019)</title>
-  <meta name="keywords" content="ICABST,ICABST2019,biomaterial,biomedical,Homepage,Home,Biotechnology,conference,bioengineering,biotechnology conference,Bangkok,Thailand,Asia" />
-  <meta name="description" content="ICABST2019 will be held in Bangkok during Dec. 26-28, 2019" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />  
+  <title>ICABST首页|大会首页--2019国际前沿生物科学与技术学术会议(ICABST2019),泰国生物会议</title>
+  <meta name="keywords" content="ICABST,官网,主页,ICABST2019,biotechnology,biomaterial,biomedical,生物会议,曼谷,泰国,国际,会议,生物技术,生物工程,学术会议,SCI正刊,SCI摘要,EI会议,CPCI,ISTP" />
+  <meta name="description" content="ICABST,2019国际前沿生物科学与技术学术会议将在12月底于曼谷召开,会议可安排SCI/EI期刊论文发表" />
   <meta name="robots" content="index,follow" />
   <meta http-equiv="x-dns-prefetch-control" content="on">
 	<link rel="icon" href="../img/icon.png" type="image/x-icon">
@@ -51,9 +49,8 @@ var _hmt = _hmt || [];
           </div>
           <div style="width:60%;height:200px; float:left;display:inline-block;">
             <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
-              International Conference on Advances in<br/>
-							Biological Science and Technology<br/>
-							<i>Bangkok, Thailand -- December 26-28, 2019</i>
+              2019国际前沿生物科学与技术学术会议<br/>(ICABST2019)<br/>
+              <i>泰国(曼谷)----2019年12月26日-28日</i>
             </p>
           </div>
           <div class="clear"></div>
@@ -63,19 +60,19 @@ var _hmt = _hmt || [];
   </div>
 
 
-   <div class="navs">
-    <ul class="menus mg-ctr">
-      <li><a title="ICABST2019" href="/">Home</a></li>
-      <li><a title="About" href="/about">About</a></li>
-      <li><a title="Organization" href="/organization">Organizer</a></li>
-      <li><a title="Speaker" href="/speakers">Speaker</a></li>
-      <li style="width: 140px"><a title="Submission" href="/submission">Submission</a></li>
-			<li><a title="Program" href="/program">Program</a></li>
-      <li style="width: 140px"><a title="Registration" href="/registration">Registration</a></li>
-      <li><a title="Venue" href="/venue">Venue</a></li>
-    	<li><a title="Chinese" href="/cn">CHINESE</a></li>
-    </ul>
-  </div>
+    <div class="navs">
+      <ul class="menus mg-ctr">
+        <li><a title="ICABST2019首页" href="/cn">ICABST</a></li>
+        <li><a title="ICABST2019大会详情" href="/cn/about">大会详情</a></li>
+        <li><a title="ICABST2019组织机构" href="/cn/organization">组织机构</a></li>
+        <li><a title="ICABST2019特邀嘉宾" href="/cn/speakers">参会嘉宾</a></li>
+        <li><a title="ICABST2019会议日程" href="/cn/program">会议日程</a></li>
+        <li><a title="ICABST2019大会征文" href="/cn/cfp">大会征文</a></li>
+        <li><a title="ICABST2019参会注册" href="/cn/registration">参会注册</a></li>
+        <li><a title="ICABST2019会议地点" href="/cn/venue">会议地点</a></li>
+    		<li><a title="ICABST2019英文版" href="/">English</a></li>
+      </ul>
+    </div>
         
   </div>
   <!--header end-->
@@ -83,9 +80,9 @@ var _hmt = _hmt || [];
   <div class="banner w-1200">
     <div class="layui-carousel" id="test10">
       <div carousel-item="">
-        <div><img class="images" src="../img/banner1_eng.png"></div>
-        <div><img class="images" src="../img/banner2_eng.png"></div>
-        <div><img class="images" src="../img/banner3_eng.png"></div>
+        <div><img class="images" src="../img/Banner1中文-小.png"></div>
+        <div><img class="images" src="../img/Banner2-中文-小.png"></div>
+        <div><img class="images" src="../img/Banner3-中文-小.png"></div>
       </div>
     </div>
     <div class="hd">
@@ -99,55 +96,49 @@ var _hmt = _hmt || [];
 
 
   <!--快速链接 end-->
-  <div class="page; lh-40" style="border: 1px solid; border-color: #c3bfbf; border-bottom: hidden; text-align: justify; font-family:'Times New Roman'; font-size: 20px">
+  <div class="page; f-20 lh-40" style="border: 1px solid; border-color: #c3bfbf; border-bottom: hidden; text-aligh: justify; font-family:'Times New Roman';">
     <div class="page_left col-6-5 fl" style="border-right: 2px dashed; border-color: #c3bfbf; padding: 10px;">
 
       <div class="about">
-        <div class="background5" style="padding-left:55px;">About</div>
+        <div class="background5" style="padding-left:55px;">会议简介</div>
 				<div class="public_p pl-30">
         <p>
-          <strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2019 International Conference on Advances in Biological Science and Technology</strong> is organized by Asia-Pacific Association of Natural Science and Engineerin and Maejo University (Thailand),
-					will be held in Bangkok, Thailand during December 26-28, 2019. ICABST2019 will include keynote speeches, invited speeches, oral presentations and poster presentations. 
-					The conference certification will be issued to all attendees including listeners. 
-					<br/>
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;As an annual gathering, it provides an extensive platform for scientists, researchers and scholars to present their research results and newest findings
-					 in all fields of Biological Science and Technology, especially in Molecular Biology and Photobiology, discuss the practical challenges encountered recommend better solutions for biotechnology. 
-					 <br/>
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Thailand: "The Land of Smiles". Thailand is an incredible destination with palaces, temples, markets, shopping, spas, friendly people, 
-					fine dining and some of the best hotels in the world. The word 'Thai' means freedom, so literally Thailand is the land of freedom and Thailand proudly proclaims that. 
-					Thailand is located in Southeastern Asia bordering the Andaman Sea and the Gulf of Thailand. 
-					In addition to being one of the world's most rewarding travel destinations, Thailand is also the most convenient gateway for travelling 
-					to Myanmar, Laos, Cambodia, Vietnam, Singapore, Malaysia and Indonesia. Thailand is without a doubt one of the most exotic destinations in Asia.
-					<br/>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Please circulate ICABST2019 to the attention of any of your colleagues who may be interested in participating 
-					(<a href="/cn/download/flyer.pdf" target="_blank" style="color: #102cf7"><u>click to download conference flyer</u></a>). 
-					We sincerely invite you to join us and hope you will have a fruitful experience during your stay in Thailand! 
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2019国际前沿生物科学与技术学术会议（ICABST2019）将于2019年12月26日-28日在泰国曼谷召开。会议由亚太自然科学与工程协会和泰国梅州大学(Maejo University)联合主办召开。<br/>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届会议报告分为特邀报告、主题报告、口头报告和张贴海报四类形式。各类报告及听众参会，均会颁发交流证书。大会鼓励各界学者、科研人员踊跃参会，共同为从事相关领域的同僚提供最新研究成果、探讨最新技术、了解国际研究前沿和热点的机会和平台。<br/>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;大会旨在促进生物科学技术的发展，并为分子生物学、生物医学与制药、生物力学与工程、生物及分子材料、生物化学、农业食品科学、及动植物学等相关学科领域的专家和学者搭建国际性学术交流平台，展示前沿研究成果，交流探讨最新工程技术，提出学科面临的考验，探索相关解决方法，推动生物科学与技术行业的发展。<br/>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届会议由Nature Events（www.nature.com）、科学网、CNKI中国知网、丁香园等平台收	录和发布，同时被多个国内外出版机构列为合作会议； 且在会议筹备期间，多个出版方提供版面支持，经由我方审核通过的论文，均可安排至相应期刊发表，并送交至相关数据库如SCI、EI及ISTP（CPCI-S）进行收录检索。<br/>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届会议力争成为推动理论应用发展的专业、前沿国际会议之一，欢迎广大学者、师生参会交流。同时希望相关高校和科研单位帮助转发会议信息<a class="pointer" href="/cn/download/flyer.pdf" target="_blank" style="color: #102cf7"><u>（下载会议宣传册）</u></a>。
         </p>
       </div>
 			</div>
 
       <div class="news mt-20">
-        <div class="background5" style="padding-left:55px;">News</div>
+        <div class="background5" style="padding-left:55px;">大会通知</div>
 				<div class="public_p pl-30">
         <ul>
-					<li><a href="/cn/download/conference_program.pdf" download="download" target="_blank" style="color: #102cf7"><u>Clike for Conference Program</u></a></li>
-					<li><a href="/submit" target="_blank" style="color: #102cf7"><u>Onilne Registration System is open to November 20, 2019</u></a></li>
-					<li><a href="/program" target="_blank" style="color: #102cf7"><u>Primary Conference Program has been issued</u></a></li>
-          <li><a href="/about" target="_blank" style="color: #102cf7"><u>ICABST2019 will be divided to 7 Sessions</u></a></li>
-					<li><a href="/venue" target="_blank" style="color: #102cf7"><u>For visa, venue and accommodations, please click "Venue" for details</u></a></li>
-					<li><a href="http://pharmacology.sc.mahidol.ac.th/december-26-28-2019-international-conference-on-advances-in-biological-science-and-technology/" target="_blank" style="color: #102cf7"><u>ICABST2019 announcement released by Mahidol University</u></a></li>
+					<li><a href="/cn/proposal" target="_blank" style="color: #102cf7"><u>ICABST2020 申请合办通知</u></a></li>
+					<li><a href="/cn/achieve" target="_blank" style="color: #102cf7"><u>ICABST2019已成功召开！</u></a></li>
+					<li><a href="/cn/download/conference_program.pdf" download="download" target="_blank" style="color: #102cf7"><u>点击下载会议指南(会议日程)</u></a></li>
+					<li><a href="http://pharmacology.sc.mahidol.ac.th/december-26-28-2019-international-conference-on-advances-in-biological-science-and-technology/" target="_blank" style="color: #102cf7"><u>本会议已在泰国玛希隆大学(Mahidol University)官网上线</u></a></li>
+          <li><a href="/cn/sci1" target="_blank" style="color: #102cf7"><u>SCI正刊征文1----生物、材料、分子生物相关领域</u></a></li>
+					<li><a href="/cn/sci2" target="_blank" style="color: #102cf7"><u>SCI正刊征文2----农业科学、动植物科学、兽医学、水产、养殖等相关领域</u></a></li>
+					<li><a href="/cn/sci3" target="_blank" style="color: #102cf7"><u>SCI正刊征文3----生物医学、药学等相关领域</u></a></li>
+					<li><a href="/cn/sciabstract" target="_blank" style="color: #102cf7"><u>SCI摘要发表--中科院三区，影响因子2以上，JCR二区</u></a></li>
+					<li><a href="/cn/cpci" target="_blank" style="color: #102cf7"><u>EI/CPCI检索会议论文征文通知</u></a></li>
+					<li><a href="/cn/submit" target="_blank" style="color: #102cf7"><u>在线提交参会信息入口已开放，请尽早提交参会信息</u></a></li>
+					<li><a href="/cn/venue" target="_blank" style="color: #102cf7"><u>签证、及会场周边住宿信息请参考“会议地点”</u></a></li>
         </ul>
         <div class="clear"></div>
       </div>
 			</div>
       <div class="keynote mt-20">
-        <div class="background5" style="padding-left:55px;">Links</div>
+        <div class="background5" style="padding-left:55px;">相关链接</div>
         <div class="url pd-5">
           <ul>
-            <li ><a class="time pl-25 " href="#">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&nbsp;&nbsp; <strong>Countdown:&nbsp;<span id="content"></span>&nbsp;&nbsp;days</strong></a></li>
-            <li ><a class="announcement" href="/cn/download/flyer.pdf" target="_blank">&emsp;&emsp;&emsp;<strong>Conference Flyer</strong></a></li>
-            <li ><a class="invitation" href="/cn/download/ICABST-Registration-Form.xlsx" target="_blank">&emsp;&emsp;&emsp;<strong>Registration Form</strong></a></li>
-						<li ><a class="article" href="/cn/download/ICABST-Abstract-Template.doc" target="_blank">&emsp;&emsp;&emsp;<strong>Abstract Templete</strong></a></li>
+            <li ><a class="time pl-30 " href="#">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&nbsp;&nbsp; <strong>倒计时:&nbsp;<span id="content"></span>&nbsp;&nbsp;&nbsp;天</strong></a></li>
+            <li ><a class="announcement" href="/cn/download/flyer.pdf" download="download" target="_blank">&emsp;&emsp;&emsp;<strong>会议宣传册</strong></a></li>
+            <li ><a class="invitation" href="/cn/download/ICABST-Registration-Form-cn.xlsx" target="_blank">&emsp;&emsp;&emsp;<strong>会议注册表</strong></a></li>
+						<li ><a class="article" href="/cn/download/ICABST-Abstract-Template.doc" target="_blank">&emsp;&emsp;&emsp;<strong>摘要模板</strong></a></li>
           </ul>
           <div class="clear"></div>
         </div>
@@ -157,36 +148,37 @@ var _hmt = _hmt || [];
     <div class="page_right col-4-1 fr mr-25">
 			<div class="; lh-80" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
 			  <ul>
-			    <li><a class="pointer" href="/submit" target="_blank"><img src="../img/abstractsubmission.png" height="68px"></a></li>
-			    <li><a class="pointer" href="/cn/download/ICABST-Registration-Form.xlsx" target="_blank"><img src="../img/registrationfrom.png" height="68px"></a></li>
-					<li><a class="pointer" href="/cn/download/ICABST-Abstract-Template.doc" target="_blank"><img src="../img/abstracttemplete.png" height="68px"></a></li>
-					<li><a class="pointer" href="/cn/download/ICABST-Poster-Template.pptx" target="_blank"><img src="../img/postertemplete.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/cn/submit" target="_blank"><img src="../img/conference2.png" height="68px"></a></li>
+					<li><a class="pointer" href="/cn/article" target="_blank"><img src="../img/conferencearticle2.png" height="68px"></a></li>
+					<li><a class="pointer" href="/cn/article" target="_blank"><img src="../img/journalarticle2.png" height="68px"></a></li>
 			    <div class="clear"></div>
 			  </ul>
 			</div>
-        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Important Dates</div>
+        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">重要日期</div>
 				<div class="pb-10">
         <ul>
-            <p>Abstract Deadline: Nov. 20, 2019</p>
-						<p>Reg. Deadline: Nov. 30, 2019</p>
-						<p>Acceptance: 7-10 working days</p>
-						<p>Conf. Date: Dec. 26-28, 2019</p>
+            <p>摘要投稿: 2019年11月20日截止</p>
+            <p>全文投稿: 本批次7月30日截止</p>
+            <p>会议日期:2019年12月26日-28日</p>
+						<p>参会注册截止: 2019年11月30日</p>
         </ul>
 				</div>
       <div style="border-top: 2px dashed; border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
-        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Organizers</div>
+        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">组织机构</div>
         <ul>
-            <p>Asia-Pacific Asso. of Natural Science & Engineering<br/><br/>
-						Maejo University (Co-organizer)</p>
+            <p>亚太自然科学与工程协会</p>
+						<p>泰国梅州大学(Maejo University)</p>
         </ul>
       </div>
-        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Contact</div>
+        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">联系我们</div>
         <ul>
-            <p>Secretary: Jason Sun, Alex Liu</p>
-						<p>Email: icabst@apanse.com</p>
-            <p>Phone: 86-0371-63226982</p>
-            <p>Mobile: +86-18137471420</p>
-            <p>Wechat: APANSE</p>
+            <p>联系人：孙老师，刘老师</p>
+						<p>会务邮箱：icabst@apanse.com</p>
+            <p>投稿邮箱：editor@apanse.com</p>
+            <p>咨询电话：0371-63226982</p>
+            <p>手机号码：18137471420</p>
+            <p>咨询QQ：3475177122</p>
+            <p>微信公众号：APANSE</p>
         </ul>
     </div>
     
@@ -198,7 +190,7 @@ var _hmt = _hmt || [];
 
 
   <div class="sponsors" style="border: 1px solid; border-top: hidden; border-color: #c3bfbf; padding: 10px;">
-    <div class="f-20 f-b pl-10 background1">Supporters / Media Partners</div>
+    <div class="f-20 f-b pl-10 background1">合作单位</div>
     <ul>
       <li><img src="../img/1--APANSE.png"/></li>
 			<li><img src="../img/MaejoUniversityLogo.png"/></li>
@@ -210,13 +202,13 @@ var _hmt = _hmt || [];
       <!--li><img src="../img/6--LOGO_EBW.jpg"/></li-->
 			<li><img src="../img/7--IOP.png"/></li>
 			<li><a href="http://wikicfp.com/cfp/servlet/event.showcfp?eventid=91287&copyownerid=153102" target="_blank"><img src="../img/9--wikicfp.png"/></a></li>
-			<li><a href="http://wikicfp.com/cfp/servlet/event.showcfp?eventid=91287&copyownerid=153102" target="_blank"><img src="../img/10--billetto.png"/></a></li>
+			<li><a href="https://billetto.co.uk/e/international-conference-on-advances-in-biological-science-and-technology-tickets-368790" target="_blank"><img src="../img/10--billetto.png"/></a></li>
 			<li><a href="https://conferencealarm.com/Event_Details.php?pendingeventid=11452" target="_blank"><img src="../img/11--conferencealarm.png"/></a></li>
 			<li><a href="http://meeting.dxy.cn/article/620176" target="_blank"><img src="../img/12--dingxiang.png"/></a></li>
 			<li><a href="https://www.science-community.org/en/node/205354" target="_blank"><img src="../img/13--science-committee.png"/></a></li>
 			<li><a href="http://membs.org/membs/news/event_details/-international-conference-on-advances-in-biological-science-and-technology-icabst2019" target="_blank"><img src="../img/14--membs.png"/></a></li>
-      <li><a href="https://global.acs.org/events/international-conference-on-advances-in-biological-science-and-technology-icabst2019/" target="_blank"><img src="../img/15--acs.png"/></a></li>
-			<div class="clear"></div>
+			<li><a href="https://global.acs.org/events/international-conference-on-advances-in-biological-science-and-technology-icabst2019/" target="_blank"><img src="../img/15--acs.png"/></a></li>
+      <div class="clear"></div>
     </ul>
   </div>
 
@@ -241,11 +233,13 @@ var _hmt = _hmt || [];
     var carousel = layui.carousel
       , form = layui.form;
 
+    //常规轮播
     carousel.render({
       elem: '#test1'
       , arrow: 'always'
     });
 
+    //改变下时间间隔、动画类型、高度
     carousel.render({
       elem: '#test2'
       , interval: 1800
@@ -253,10 +247,11 @@ var _hmt = _hmt || [];
       , height: '120px'
     });
 
+    //设定各种参数
     var ins3 = carousel.render({
       elem: '#test3'
     });
-
+    //图片轮播
     carousel.render({
       elem: '#test10'
       , width: '1200px'
@@ -264,6 +259,7 @@ var _hmt = _hmt || [];
       , interval: 5000
     });
 
+    //事件
     carousel.on('change(test10)', function (res) {
       console.log(res)
     });
@@ -280,6 +276,7 @@ var _hmt = _hmt || [];
       }
     };
 
+    //监听开关
     form.on('switch(autoplay)', function () {
       ins3.reload({
         autoplay: this.checked
@@ -295,6 +292,7 @@ var _hmt = _hmt || [];
       ins3.reload(options);
     });
 
+    //其它示例
     $('.demoTest .layui-btn').on('click', function () {
       var othis = $(this), type = othis.data('type');
       active[type] ? active[type].call(this, othis) : '';
@@ -319,6 +317,7 @@ var _hmt = _hmt || [];
     }
   };
   getchaTime("", "12/26/2019");
+  <!--倒计时天数 js-->
   $(".fullSlide").hover(function () {
       $(this).find(".prev,.next").stop(true, true).fadeTo("show", 0.5)
     },
