--- a/src/main/resources/templates/page/en/achieve.html
+++ b/src/main/resources/templates/page/en/achieve.html
@@ -12,14 +12,13 @@ var _hmt = _hmt || [];
 
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
-
-  <title>ICABST2019 Successfully Held| 2019 International Conference On Advances in Biological Science and Technology(ICABST2019)</title>
-  <meta name="keywords" content="ICABST,ICABST2019,biomaterial,biomedical,About,Biotechnology,conference,bioengineering,biotechnology conference,Bangkok,Thailand,Asia" />
-  <meta name="description" content="ICABST2019 will be held in Bangkok during Dec. 26-28, 2019" />
-  <meta name="robots" content="index,follow" />
-  <meta http-equiv="x-dns-prefetch-control" content="on">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
+  <title>ICABST2019成功召开| 2019国际前沿生物科学与技术学术会议(ICABST2019),泰国生物会议</title>
+	<meta name="keywords" content="ICABST,ICABST2019,biotechnology,biomaterial,biomedical,生物会议,曼谷,泰国,国际,会议,生物技术,生物工程,学术会议,SCI正刊,SCI摘要,EI会议,CPCI,ISTP" />
+  <meta name="description" content="ICABST,2019国际前沿生物科学与技术学术会议将在12月底于曼谷召开,会议可安排SCI/EI期刊论文发表" />
+	<meta name="robots" content="index,follow" />
+	<meta http-equiv="x-dns-prefetch-control" content="on">
 	<link rel="icon" href="../img/icon.png" type="image/x-icon">
   <link rel="stylesheet" href="../css/public.css" />
   <link rel="stylesheet" href="../css/bootstrap.min.css" />
@@ -48,9 +47,8 @@ var _hmt = _hmt || [];
           </div>
           <div style="width:60%;height:200px; float:left;display:inline-block;">
             <p class="banner_p" style="font-family:'Times New Roman'; line-height: 50px" align="right">
-              International Conference on Advances in<br/>
-							Biological Science and Technology<br/>
-							<i>Bangkok, Thailand -- December 26-28, 2019</i>
+              2019国际前沿生物科学与技术学术会议<br/>(ICABST2019)<br/>
+              <i>泰国(曼谷)----2019年12月26日-28日</i>
             </p>
           </div>
           <div class="clear"></div>
@@ -60,17 +58,17 @@ var _hmt = _hmt || [];
   </div>
 
 
-   <div class="navs">
+  <div class="navs">
     <ul class="menus mg-ctr">
-      <li><a title="ICABST2019" href="/">Home</a></li>
-      <li><a title="About" href="/about">About</a></li>
-      <li><a title="Organization" href="/organization">Organizer</a></li>
-      <li><a title="Speaker" href="/speakers">Speaker</a></li>
-      <li style="width: 140px"><a title="Submission" href="/submission">Submission</a></li>
-			<li><a title="Program" href="/program">Program</a></li>
-      <li style="width: 140px"><a title="Registration" href="/registration">Registration</a></li>
-      <li><a title="Venue" href="/venue">Venue</a></li>
-    	<li><a title="Chinese" href="/cn">CHINESE</a></li>
+      <li><a title="ICABST2019首页" href="/cn">ICABST</a></li>
+      <li><a title="ICABST2019大会详情" href="/cn/about">大会详情</a></li>
+      <li><a title="ICABST2019组织机构" href="/cn/organization">组织机构</a></li>
+      <li><a title="ICABST2019特邀嘉宾" href="/cn/speakers">参会嘉宾</a></li>
+      <li><a title="ICABST2019会议日程" href="/cn/program">会议日程</a></li>
+      <li><a title="ICABST2019大会征文" href="/cn/cfp">大会征文</a></li>
+      <li><a title="ICABST2019参会注册" href="/cn/registration">参会注册</a></li>
+      <li><a title="ICABST2019会议地点" href="/cn/venue">会议地点</a></li>
+  		<li><a title="ICABST2019英文版" href="/">English</a></li>
     </ul>
   </div>
   
@@ -84,86 +82,76 @@ var _hmt = _hmt || [];
         <div class="public_p pb-20 pl-30">
 					<div class="text-center">
 					<p><strong>
-					  ICABST2019 successfully held in Bangkok, Thailand 
-						</strong></p>
+					  ICABST2019成功在泰国曼谷召开
+						</strong><br/><br/></p>
 					</div>
 					<p>
-						 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2019 International Conference on Advances in Biological Science and Technology was successfully held in The Tawana Bangkok Hotel, Thailand.
-						 </p>
-					<p>
-					  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ICABST2019 was organized by Asia-Pacific Association of Natural Science and Engineerin and Maejo University (Thailand), in collaboration with Mahidol University, Nature Events, IOP Pulishing, and multiple academic affiliations.
-						</p>
-					<p>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In the opening ceremony, conference chair Prof. Gil Navon (School of Chemistry, Tel-Aviv University) and Prof. Hadi Shafiee (Harvard Medical School) inaugurated the conference by delivering welcome messages. 
-						Both of them gave an introduction of APANSE and warmly welcomed the delegates from all over the world. Prof. Gil Navon also made a short report about the proposal of ICABST2020.
-						Delegates from 16 countries attended the conference, including distinguished scholars who have outstanding influence in related fields.
-						</p>
-					<p>
-						The conference lasted for 2 days including Invited Session, five Oral Sessions and two Poster Sessions.
-						During the invited session, Prof. Gil Navon (Tel-Aviv University) with H-index of 52 & over 10000 times citations, gave an invited talk entitled "Molecular Imaging of Breast Cancer by Chemical Exchange Saturation Transfer MRI of Glucose Analogs". 
-						Then Prof. Hadi Shafiee (Harvard Medical School) gave a talk about "Mobile Health Diagnostics with Applications in Medicine". At last, Prof. Taisun Kim (CEO of Biometrix Technology Inc.; Professor of Hallym University) also gave a wonderful speeches with the title of "6 HCV Genotyping 9G testTM for highly accurate screening and genotyping of six HCV genotypes including HCV 1a, 1b, 2, 3, 4 and 6 (6a, 6f, 6i and 6n".
-						After invited session finished, Dr. Pornpun Vivithanaporn (Mahidol University), as the session chair, made a detailed conclusion of all invited speeches; accompanying a heated discussion.
-						</p>
-					<p>
-						ICABST is an annual academic event, the ICABST2020 is under preparation. Both Organizing Committee and Scientific Committee welcome scholars and researchers to participate the future events.
-						ICABST is pleased to announce this Call for Proposals for individuals or groups interested in co-organize the next ICABST conference, slated for the third quarter of 2020.
-						The proposal deadline is the February 15, 2020. If you are not personally interested but know of someone else who could do an excellent job of organizing this event, please feel free to forward this information.
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;“2019国际前沿生物科学与技术学术会议”于2019年12月26-28日在泰国曼谷--塔瓦那酒店成功召开。本届会议由亚太自然科学与工程协会和泰国梅州大学(Maejo University)联合主办；同时由玛希隆大学（Mahidol University），Nature Events，IOP出版社，及其他学术单位及媒体提供相关支持。
+						<br/><br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在大会开幕式中，来自特拉维夫大学（Tel-Aviv University）的Gil Navon教授、哈佛医学院Hadi Shafiee教授作为大会主席为会议致词。
+						二位会议主席在欢迎词中简单介绍了APANSE协会，同时热烈欢迎来自世界各地的学者参加本届学术会议；同时，Gil Navon教授就2020年ICABST的合作做了简短报告。本届会议共有来自16个国家的学者参加，邀请了若干领域内杰出影响的专家做了大会报告，与会者深入广泛的讨论了相关议题。
+						<br/><br/>
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届会议持续两天，包括邀请报告、口头报告和张贴报告。作为邀请报告的报告人，Gil Navon教授拥有超过一万次数的引用，其H指数高达52；哈佛医学院Hadi Shafiee教授，作为部门负责人，具有丰富的教学、科研、及临床经验；同时，来自韩国哈利姆大学的Taisun Kim教授，兼任全球著名生物研究型企业Biometrix Technology Inc.的CEO，也做了重要报告。
+						在主讲报告后，玛希隆大学（Mahidol University）的Pornpun Vivithanaporn博士作为分会主持人，对三位主讲人的报告进行了高度评价并带领与会人员对于报告中所提出的研究热点进行了热烈的讨论。
+						<br/><br/>
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;会议结束后，大会组委会感谢每一位参会者的支持和参与，并为会议主讲人及优秀报告人颁发奖章，同时对泰国梅州大学（Maejo University）及玛希隆大学（Mahidol University）表达了诚挚的感谢。
+						<br/><br/>
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ICABST为年度学术会议，且2020年的本会议正在紧张筹备中，欢迎来自各个国家和高校及研究机构的学者关注并参与。
+						同时，在此代表组委会和学术委员会，诚挚向社会各界发出合办邀请，如有单位、团体或个人有意向参与共同举办学术会议，可随时与我们取得联系。ICABST2020将在2月15日停止招收合办单位，请有意向的个人或团体尽早联系我方会务人员。
 						</p>
 						<ul>
 							<div class="text-center">
 							<li>
-								<img src="../img/O1.jpg" width="280px">&nbsp;&nbsp;&nbsp;<img src="../img/O2.jpg" width="280px">
-								<img src="../img/O3.jpg" width="280px">&nbsp;&nbsp;&nbsp;<img src="../img/O4.jpg" width="280px">
-								<img src="../img/O5.jpg" width="280px">&nbsp;&nbsp;&nbsp;<img src="../img/O6.jpg" width="280px">
-								<img src="../img/O7.jpg" width="280px">&nbsp;&nbsp;&nbsp;<img src="../img/O8.jpg" width="280px">
-								<img src="../img/O9.jpg" width="280px">&nbsp;&nbsp;&nbsp;<img src="../img/C1.jpg" width="280px">
-								<img src="../img/C2.jpg" width="280px">
+								<img src="../img/O1.jpg" width="340px">&nbsp;&nbsp;&nbsp;<img src="../img/O2.jpg" width="340px"><br/><br/>
+								<img src="../img/O3.jpg" width="340px">&nbsp;&nbsp;&nbsp;<img src="../img/O4.jpg" width="340px"><br/><br/>
+								<img src="../img/O5.jpg" width="340px">&nbsp;&nbsp;&nbsp;<img src="../img/O6.jpg" width="340px"><br/><br/>
+								<img src="../img/O7.jpg" width="340px">&nbsp;&nbsp;&nbsp;<img src="../img/O8.jpg" width="340px"><br/><br/>
+								<img src="../img/O9.jpg" width="340px">&nbsp;&nbsp;&nbsp;<img src="../img/C1.jpg" width="340px"><br/><br/>
+								<img src="../img/C2.jpg" width="340px"><br/><br/>
 							</li>
 							</div>
 							<div class="clear"></div>
 							</ul>
       </div>
+		</div>
     <div class="page_right col-4-1 fr mr-25">
 			<div class="; lh-80" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
 			  <ul>
-			    <li><a class="pointer" href="/submit" target="_blank"><img src="../img/abstractsubmission.png" height="68px"></a></li>
-			    <li><a class="pointer" href="/cn/download/ICABST-Registration-Form.xlsx" target="_blank"><img src="../img/registrationfrom.png" height="68px"></a></li>
-			    <li><a class="pointer" href="/cn/download/ICABST-Abstract-Template.doc" target="_blank"><img src="../img/abstracttemplete.png" height="68px"></a></li>
-			    <li><a class="pointer" href="/cn/download/ICABST-Poster-Template.pptx" target="_blank"><img src="../img/postertemplete.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/cn/submit" target="_blank"><img src="../img/conference2.png" height="68px"></a></li>
+					<li><a class="pointer" href="/cn/article" target="_blank"><img src="../img/conferencearticle2.png" height="68px"></a></li>
+					<li><a class="pointer" href="/cn/article" target="_blank"><img src="../img/journalarticle2.png" height="68px"></a></li>
 			    <div class="clear"></div>
 			  </ul>
 			</div>
-        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Important Dates</div>
+        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">重要日期</div>
 				<div class="pb-10">
         <ul>
-            <p>Abstract Deadline: Nov. 20, 2019</p>
-						<p>Reg. Deadline: Nov. 30, 2019</p>
-						<p>Acceptance: 7-10 working days</p>
-						<p>Conf. Date: December 26-28, 2019</p>
+            <p>摘要投稿: 2019年11月20日截止</p>
+            <p>全文投稿: 本批次7月30日截止</p>
+            <p>会议日期:2019年12月26日-28日</p>
+						<p>参会注册截止: 2019年11月30日</p>
         </ul>
 				</div>
       <div style="border-top: 2px dashed; border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
-        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Organizers</div>
+        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">组织机构</div>
         <ul>
-            <p>Asia-Pacific Asso. of Natural Science & Engineering<br/><br/>
-						Maejo University (Co-organizer)</p>
+            <p>亚太自然科学与工程协会</p>
+						<p>泰国梅州大学(Maejo University)</p>
         </ul>
       </div>
-        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">Contact</div>
+        <div class="f-24 text-center pt-20 pb-20 color-03 f-b">联系我们</div>
         <ul>
-            <p>Secretary: Jason Sun, Alex Liu</p>
-						<p>Email: icabst@apanse.com</p>
-            <p>Phone: 86-0371-63226982</p>
-            <p>Mobile: +86-18137471420</p>
-            <p>Wechat: APANSE</p>
+            <p>联系人：孙老师，刘老师</p>
+						<p>会务邮箱：icabst@apanse.com</p>
+            <p>投稿邮箱：editor@apanse.com</p>
+            <p>咨询电话：0371-63226982</p>
+            <p>手机号码：18137471420</p>
+            <p>咨询QQ：3475177122</p>
+            <p>微信公众号：APANSE</p>
         </ul>
     </div>
-      
       <div class="clear"></div>
-
-
     </div>
-
   </div>
 
 <!--footer-->
@@ -175,10 +163,6 @@ var _hmt = _hmt || [];
 		</p>
   </div>
 </footer>
-
-
-
-</div>
 
 <script>
 (function(){
@@ -197,3 +181,4 @@ var _hmt = _hmt || [];
 
 </body>
 </html>
+
