--- a/src/main/resources/templates/page/2020/cn/cfp.html
+++ b/src/main/resources/templates/page/2020/cn/cfp.html
@@ -131,8 +131,8 @@ var _hmt = _hmt || [];
 										<tr><td style="height: 38px;" align="left">&nbsp;&nbsp;&nbsp;&nbsp;综合领域EI期刊</td></tr>
 										<tr>
 											<th style="height: 76px; text-align:center">会议论文</th>
-											<td colspan="2" style="height: 38px;" align="left">&nbsp;&nbsp;&nbsp;&nbsp;会议论文分为EI检索和ISTP(CPCI-S)检索两种<br/>&nbsp;&nbsp;&nbsp;&nbsp;投稿前请先咨询</td>
-											<td style="height: 38px;" align="left">&nbsp;&nbsp;&nbsp;&nbsp;2019年底发表<br/>&nbsp;&nbsp;&nbsp;&nbsp;2020年初完成检索</td>
+											<td colspan="2" style="height: 38px;" align="left">&nbsp;&nbsp;&nbsp;&nbsp;EI及CPCI-S检索，不限领域<br/>&nbsp;&nbsp;&nbsp;&nbsp;投稿前请先咨询</td>
+											<td style="height: 38px;" align="left">&nbsp;&nbsp;&nbsp;&nbsp;2020年上半年发表<br/>&nbsp;&nbsp;&nbsp;&nbsp;发表后2-4个月检索</td>
 										</tr>
 									</tbody>
 								</table>
