--- a/src/main/resources/templates/page/2020/cn/sci3.html
+++ b/src/main/resources/templates/page/2020/cn/sci3.html
@@ -101,7 +101,7 @@ var _hmt = _hmt || [];
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>SCI-5：</strong>药物化学、药理学毒理学<br/>
 			<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>期刊周期：</strong>平均为3-5个月发表<br/>
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>期刊版面：</strong>2019年剩余少量正刊版面，及2020年上半年正刊版面<br/>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>期刊版面：</strong>2020年正刊版面<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>期刊检索：</strong>影响因子在0.8-2，检索类型为Article（期刊论文检索，无会议信息）<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>期刊来源：</strong>来自多个国家的SCI期刊，如本届会议合作的泰国大学主办的SCI<br/>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>注：由我方安排的文章，其中稿率及发表周期将优于您自行投稿的周期</strong><br/>
