--- a/src/main/resources/templates/page/2019/cn/about.html
+++ b/src/main/resources/templates/page/2019/cn/about.html
@@ -60,15 +60,15 @@ var _hmt = _hmt || [];
 
   <div class="navs">
     <ul class="menus mg-ctr">
-      <li><a title="ICABST2019首页" href="/cn">ICABST</a></li>
-      <li><a title="ICABST2019大会详情" href="/cn/about">大会详情</a></li>
-      <li><a title="ICABST2019组织机构" href="/cn/organization">组织机构</a></li>
-      <li><a title="ICABST2019特邀嘉宾" href="/cn/speakers">参会嘉宾</a></li>
-      <li><a title="ICABST2019会议日程" href="/cn/program">会议日程</a></li>
-      <li><a title="ICABST2019大会征文" href="/cn/cfp">大会征文</a></li>
-      <li><a title="ICABST2019参会注册" href="/cn/registration">参会注册</a></li>
-      <li><a title="ICABST2019会议地点" href="/cn/venue">会议地点</a></li>
-  		<li><a title="ICABST2019英文版" href="/">English</a></li>
+      <li><a title="ICABST2019首页" href="/2019cn">ICABST</a></li>
+      <li><a title="ICABST2019大会详情" href="/2019cn/about">大会详情</a></li>
+      <li><a title="ICABST2019组织机构" href="/2019cn/organization">组织机构</a></li>
+      <li><a title="ICABST2019特邀嘉宾" href="/2019cn/speakers">参会嘉宾</a></li>
+      <li><a title="ICABST2019会议日程" href="/2019cn/program">会议日程</a></li>
+      <li><a title="ICABST2019大会征文" href="/2019cn/cfp">大会征文</a></li>
+      <li><a title="ICABST2019参会注册" href="/2019cn/registration">参会注册</a></li>
+      <li><a title="ICABST2019会议地点" href="/2019cn/venue">会议地点</a></li>
+  		<li><a title="ICABST2019英文版" href="/2019">English</a></li>
     </ul>
   </div>
   
@@ -97,7 +97,7 @@ var _hmt = _hmt || [];
           </p-->
 					<p>
 						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届会议力争成为推动理论应用发展的专业、前沿国际会议之一，欢迎广大学者、师生参会交流。同时希望相关高校和科研单位帮助转发会议信息
-						<a class="pointer" href="/cn/download/flyer.pdf" target="_blank" style="color: #102cf7"><u>（下载会议宣传册）</u></a>。
+						<a class="pointer" href="/cn/download/flyer2019.pdf" target="_blank" style="color: #102cf7"><u>（下载会议宣传册）</u></a>。
 					</p>
 
           <p><strong>重要时间</strong></p>
@@ -108,7 +108,7 @@ var _hmt = _hmt || [];
           <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;注册截止：2019年11月30日</p>
           <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;全文截止：全文长年均可投稿，本批次7月30日截止<br />&nbsp;</p>
 					
-					<p><strong>有关签证信息、泰国当地交通及住宿信息，请参考<a title="会议地点" class="pointer" href="/cn/venue" style="color: #102cf7" target="_blank"><u>会议地点</u></a>中相关内容</strong></p>
+					<p><strong>有关签证信息、泰国当地交通及住宿信息，请参考<a title="会议地点" class="pointer" href="/2019cn/venue" style="color: #102cf7" target="_blank"><u>会议地点</u></a>中相关内容</strong></p>
         </div>
 
         <div class="background4" style="padding-left:55px; padding-bottom: 10px;">大会议题</div>
@@ -141,9 +141,9 @@ var _hmt = _hmt || [];
     <div class="page_right col-4-1 fr mr-25">
 			<div class="; lh-80" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
 			  <ul>
-			    <li><a class="pointer" href="/cn/submit" target="_blank"><img src="../img/conference2.png" height="68px"></a></li>
-					<li><a class="pointer" href="/cn/article" target="_blank"><img src="../img/conferencearticle2.png" height="68px"></a></li>
-					<li><a class="pointer" href="/cn/article" target="_blank"><img src="../img/journalarticle2.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/2019cn/submit" target="_blank"><img src="../img/conference2.png" height="68px"></a></li>
+					<li><a class="pointer" href="/2019cn/article" target="_blank"><img src="../img/conferencearticle2.png" height="68px"></a></li>
+					<li><a class="pointer" href="/2019cn/article" target="_blank"><img src="../img/journalarticle2.png" height="68px"></a></li>
 			    <div class="clear"></div>
 			  </ul>
 			</div>
