--- a/src/main/resources/templates/page/2019/cn/index.html
+++ b/src/main/resources/templates/page/2019/cn/index.html
@@ -62,15 +62,15 @@ var _hmt = _hmt || [];
 
     <div class="navs">
       <ul class="menus mg-ctr">
-        <li><a title="ICABST2019首页" href="/cn">ICABST</a></li>
-        <li><a title="ICABST2019大会详情" href="/cn/about">大会详情</a></li>
-        <li><a title="ICABST2019组织机构" href="/cn/organization">组织机构</a></li>
-        <li><a title="ICABST2019特邀嘉宾" href="/cn/speakers">参会嘉宾</a></li>
-        <li><a title="ICABST2019会议日程" href="/cn/program">会议日程</a></li>
-        <li><a title="ICABST2019大会征文" href="/cn/cfp">大会征文</a></li>
-        <li><a title="ICABST2019参会注册" href="/cn/registration">参会注册</a></li>
-        <li><a title="ICABST2019会议地点" href="/cn/venue">会议地点</a></li>
-    		<li><a title="ICABST2019英文版" href="/">English</a></li>
+        <li><a title="ICABST2019首页" href="/2019cn">ICABST</a></li>
+        <li><a title="ICABST2019大会详情" href="/2019cn/about">大会详情</a></li>
+        <li><a title="ICABST2019组织机构" href="/2019cn/organization">组织机构</a></li>
+        <li><a title="ICABST2019特邀嘉宾" href="/2019cn/speakers">参会嘉宾</a></li>
+        <li><a title="ICABST2019会议日程" href="/2019cn/program">会议日程</a></li>
+        <li><a title="ICABST2019大会征文" href="/2019cn/cfp">大会征文</a></li>
+        <li><a title="ICABST2019参会注册" href="/2019cn/registration">参会注册</a></li>
+        <li><a title="ICABST2019会议地点" href="/2019cn/venue">会议地点</a></li>
+    		<li><a title="ICABST2019英文版" href="/2019">English</a></li>
       </ul>
     </div>
         
@@ -103,11 +103,11 @@ var _hmt = _hmt || [];
         <div class="background5" style="padding-left:55px;">会议简介</div>
 				<div class="public_p pl-30">
         <p>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2019国际前沿生物科学与技术学术会议（ICABST2019）将于2019年12月26日-28日在泰国曼谷召开。会议由亚太自然科学与工程协会和泰国梅州大学(Maejo University)联合主办召开。<br/>
+          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2019国际前沿生物科学与技术学术会议（ICABST2019）于2019年12月26日-28日在泰国曼谷召开。会议由亚太自然科学与工程协会和泰国梅州大学(Maejo University)联合主办召开。<br/>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届会议报告分为特邀报告、主题报告、口头报告和张贴海报四类形式。各类报告及听众参会，均会颁发交流证书。大会鼓励各界学者、科研人员踊跃参会，共同为从事相关领域的同僚提供最新研究成果、探讨最新技术、了解国际研究前沿和热点的机会和平台。<br/>
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;大会旨在促进生物科学技术的发展，并为分子生物学、生物医学与制药、生物力学与工程、生物及分子材料、生物化学、农业食品科学、及动植物学等相关学科领域的专家和学者搭建国际性学术交流平台，展示前沿研究成果，交流探讨最新工程技术，提出学科面临的考验，探索相关解决方法，推动生物科学与技术行业的发展。<br/>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届会议由Nature Events（www.nature.com）、科学网、CNKI中国知网、丁香园等平台收	录和发布，同时被多个国内外出版机构列为合作会议； 且在会议筹备期间，多个出版方提供版面支持，经由我方审核通过的论文，均可安排至相应期刊发表，并送交至相关数据库如SCI、EI及ISTP（CPCI-S）进行收录检索。<br/>
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届会议力争成为推动理论应用发展的专业、前沿国际会议之一，欢迎广大学者、师生参会交流。同时希望相关高校和科研单位帮助转发会议信息<a class="pointer" href="/cn/download/flyer.pdf" target="_blank" style="color: #102cf7"><u>（下载会议宣传册）</u></a>。
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;本届会议力争成为推动理论应用发展的专业、前沿国际会议之一，欢迎广大学者、师生参会交流。同时希望相关高校和科研单位帮助转发会议信息<a class="pointer" href="/cn/download/flyer2019.pdf" target="_blank" style="color: #102cf7"><u>（下载会议宣传册）</u></a>。
         </p>
       </div>
 			</div>
@@ -116,15 +116,14 @@ var _hmt = _hmt || [];
         <div class="background5" style="padding-left:55px;">大会通知</div>
 				<div class="public_p pl-30">
         <ul>
-					<li><a href="/cn/download/conference_program.pdf" download="download" target="_blank" style="color: #102cf7"><u>点击下载会议指南(会议日程)</u></a></li>
+					<li><a href="/2019cn/proposal" target="_blank" style="color: #102cf7"><u>2020年会议合办邀请&通知</u></a></li>
+					<li><a href="/2019cn/achieve" target="_blank" style="color: #102cf7"><u>2019ICABST在曼谷塔瓦那酒店成功召开</u></a></li>
 					<li><a href="http://pharmacology.sc.mahidol.ac.th/december-26-28-2019-international-conference-on-advances-in-biological-science-and-technology/" target="_blank" style="color: #102cf7"><u>本会议已在泰国玛希隆大学(Mahidol University)官网上线</u></a></li>
-          <li><a href="/cn/sci1" target="_blank" style="color: #102cf7"><u>SCI正刊征文1----生物、材料、分子生物相关领域</u></a></li>
-					<li><a href="/cn/sci2" target="_blank" style="color: #102cf7"><u>SCI正刊征文2----农业科学、动植物科学、兽医学、水产、养殖等相关领域</u></a></li>
-					<li><a href="/cn/sci3" target="_blank" style="color: #102cf7"><u>SCI正刊征文3----生物医学、药学等相关领域</u></a></li>
-					<li><a href="/cn/sciabstract" target="_blank" style="color: #102cf7"><u>SCI摘要发表--中科院三区，影响因子2以上，JCR二区</u></a></li>
-					<li><a href="/cn/cpci" target="_blank" style="color: #102cf7"><u>EI/CPCI检索会议论文征文通知</u></a></li>
-					<li><a href="/cn/submit" target="_blank" style="color: #102cf7"><u>在线提交参会信息入口已开放，请尽早提交参会信息</u></a></li>
-					<li><a href="/cn/venue" target="_blank" style="color: #102cf7"><u>签证、及会场周边住宿信息请参考“会议地点”</u></a></li>
+          <li><a href="/2019cn/sci1" target="_blank" style="color: #102cf7"><u>SCI正刊征文1----生物、材料、分子生物相关领域</u></a></li>
+					<li><a href="/2019cn/sci2" target="_blank" style="color: #102cf7"><u>SCI正刊征文2----农业科学、动植物科学、兽医学、水产、养殖等相关领域</u></a></li>
+					<li><a href="/2019cn/sci3" target="_blank" style="color: #102cf7"><u>SCI正刊征文3----生物医学、药学等相关领域</u></a></li>
+					<li><a href="/2019cn/sciabstract" target="_blank" style="color: #102cf7"><u>SCI摘要发表--中科院三区，影响因子2以上，JCR二区</u></a></li>
+					<li><a href="/2019cn/cpci" target="_blank" style="color: #102cf7"><u>EI/CPCI检索会议论文征文通知</u></a></li>
         </ul>
         <div class="clear"></div>
       </div>
@@ -134,8 +133,8 @@ var _hmt = _hmt || [];
         <div class="url pd-5">
           <ul>
             <li ><a class="time pl-30 " href="#">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&nbsp;&nbsp; <strong>倒计时:&nbsp;<span id="content"></span>&nbsp;&nbsp;&nbsp;天</strong></a></li>
-            <li ><a class="announcement" href="/cn/download/flyer.pdf" download="download" target="_blank">&emsp;&emsp;&emsp;<strong>会议宣传册</strong></a></li>
-            <li ><a class="invitation" href="/cn/download/ICABST-Registration-Form-cn.xlsx" target="_blank">&emsp;&emsp;&emsp;<strong>会议注册表</strong></a></li>
+            <li ><a class="announcement" href="/cn/download/flyer2019.pdf" download="download" target="_blank">&emsp;&emsp;&emsp;<strong>会议宣传册</strong></a></li>
+            <li ><a class="invitation" href="/cn/download/ICABST-Registration-Form-cn2019.xlsx" target="_blank">&emsp;&emsp;&emsp;<strong>会议注册表</strong></a></li>
 						<li ><a class="article" href="/cn/download/ICABST-Abstract-Template.doc" target="_blank">&emsp;&emsp;&emsp;<strong>摘要模板</strong></a></li>
           </ul>
           <div class="clear"></div>
@@ -146,9 +145,9 @@ var _hmt = _hmt || [];
     <div class="page_right col-4-1 fr mr-25">
 			<div class="; lh-80" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
 			  <ul>
-			    <li><a class="pointer" href="/cn/submit" target="_blank"><img src="../img/conference2.png" height="68px"></a></li>
-					<li><a class="pointer" href="/cn/article" target="_blank"><img src="../img/conferencearticle2.png" height="68px"></a></li>
-					<li><a class="pointer" href="/cn/article" target="_blank"><img src="../img/journalarticle2.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/2019cn/submit" target="_blank"><img src="../img/conference2.png" height="68px"></a></li>
+					<li><a class="pointer" href="/2019cn/article" target="_blank"><img src="../img/conferencearticle2.png" height="68px"></a></li>
+					<li><a class="pointer" href="/2019cn/article" target="_blank"><img src="../img/journalarticle2.png" height="68px"></a></li>
 			    <div class="clear"></div>
 			  </ul>
 			</div>
