--- a/src/main/resources/templates/page/2019/cn/proposal.html
+++ b/src/main/resources/templates/page/2019/cn/proposal.html
@@ -105,6 +105,7 @@ var _hmt = _hmt || [];
 						For related issues, please contact info@apanse.com<br/>
 						</p>
       </div>
+			</div>
     <div class="page_right col-4-1 fr mr-25">
 			<div class="; lh-80" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
 			  <ul>
@@ -141,12 +142,8 @@ var _hmt = _hmt || [];
             <p>微信公众号：APANSE</p>
         </ul>
     </div>
-      
-      <div class="clear"></div>
-
-
+		<div class="clear"></div>
     </div>
-
   </div>
 
 <!--footer-->
