--- a/src/main/resources/templates/page/2019/cn/achieve.html
+++ b/src/main/resources/templates/page/2019/cn/achieve.html
@@ -60,15 +60,15 @@ var _hmt = _hmt || [];
 
   <div class="navs">
     <ul class="menus mg-ctr">
-      <li><a title="ICABST2019首页" href="/cn">ICABST</a></li>
-      <li><a title="ICABST2019大会详情" href="/cn/about">大会详情</a></li>
-      <li><a title="ICABST2019组织机构" href="/cn/organization">组织机构</a></li>
-      <li><a title="ICABST2019特邀嘉宾" href="/cn/speakers">参会嘉宾</a></li>
-      <li><a title="ICABST2019会议日程" href="/cn/program">会议日程</a></li>
-      <li><a title="ICABST2019大会征文" href="/cn/cfp">大会征文</a></li>
-      <li><a title="ICABST2019参会注册" href="/cn/registration">参会注册</a></li>
-      <li><a title="ICABST2019会议地点" href="/cn/venue">会议地点</a></li>
-  		<li><a title="ICABST2019英文版" href="/">English</a></li>
+      <li><a title="ICABST2019首页" href="/2019cn">ICABST</a></li>
+      <li><a title="ICABST2019大会详情" href="/2019cn/about">大会详情</a></li>
+      <li><a title="ICABST2019组织机构" href="/2019cn/organization">组织机构</a></li>
+      <li><a title="ICABST2019特邀嘉宾" href="/2019cn/speakers">参会嘉宾</a></li>
+      <li><a title="ICABST2019会议日程" href="/2019cn/program">会议日程</a></li>
+      <li><a title="ICABST2019大会征文" href="/2019cn/cfp">大会征文</a></li>
+      <li><a title="ICABST2019参会注册" href="/2019cn/registration">参会注册</a></li>
+      <li><a title="ICABST2019会议地点" href="/2019cn/venue">会议地点</a></li>
+  		<li><a title="ICABST2019英文版" href="/2019">English</a></li>
     </ul>
   </div>
   
@@ -106,23 +106,24 @@ var _hmt = _hmt || [];
 						<ul>
 							<div class="text-center">
 							<li>
-								<img src="../img/O1.jpg" width="280px">&nbsp;&nbsp;&nbsp;<img src="../img/O2.jpg" width="280px">
-								<img src="../img/O3.jpg" width="280px">&nbsp;&nbsp;&nbsp;<img src="../img/O4.jpg" width="280px">
-								<img src="../img/O5.jpg" width="280px">&nbsp;&nbsp;&nbsp;<img src="../img/O6.jpg" width="280px">
-								<img src="../img/O7.jpg" width="280px">&nbsp;&nbsp;&nbsp;<img src="../img/O8.jpg" width="280px">
-								<img src="../img/O9.jpg" width="280px">&nbsp;&nbsp;&nbsp;<img src="../img/C1.jpg" width="280px">
-								<img src="../img/C2.jpg" width="280px">
+								<img src="../img/O1.jpg" width="320px">&nbsp;&nbsp;<img src="../img/O2.jpg" width="320px"><br/><br/>
+								<img src="../img/O3.jpg" width="320px">&nbsp;&nbsp;<img src="../img/O4.jpg" width="320px"><br/><br/>
+								<img src="../img/O5.jpg" width="320px">&nbsp;&nbsp;<img src="../img/O6.jpg" width="320px"><br/><br/>
+								<img src="../img/O7.jpg" width="320px">&nbsp;&nbsp;<img src="../img/O8.jpg" width="320px"><br/><br/>
+								<img src="../img/O9.jpg" width="320px">&nbsp;&nbsp;<img src="../img/C1.jpg" width="320px"><br/><br/>
+								<img src="../img/C2.jpg" width="320px">
 							</li>
 							</div>
 							<div class="clear"></div>
 							</ul>
       </div>
+			</div>
     <div class="page_right col-4-1 fr mr-25">
 			<div class="; lh-80" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
 			  <ul>
-			    <li><a class="pointer" href="/cn/submit" target="_blank"><img src="../img/conference2.png" height="68px"></a></li>
-					<li><a class="pointer" href="/cn/article" target="_blank"><img src="../img/conferencearticle2.png" height="68px"></a></li>
-					<li><a class="pointer" href="/cn/article" target="_blank"><img src="../img/journalarticle2.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/2019cn/submit" target="_blank"><img src="../img/conference2.png" height="68px"></a></li>
+					<li><a class="pointer" href="/2019cn/article" target="_blank"><img src="../img/conferencearticle2.png" height="68px"></a></li>
+					<li><a class="pointer" href="/2019cn/article" target="_blank"><img src="../img/journalarticle2.png" height="68px"></a></li>
 			    <div class="clear"></div>
 			  </ul>
 			</div>
@@ -153,12 +154,8 @@ var _hmt = _hmt || [];
             <p>微信公众号：APANSE</p>
         </ul>
     </div>
-      
       <div class="clear"></div>
-
-
     </div>
-
   </div>
 
 <!--footer-->
