--- a/src/main/resources/templates/page/2019/cn/cfp.html
+++ b/src/main/resources/templates/page/2019/cn/cfp.html
@@ -60,15 +60,15 @@ var _hmt = _hmt || [];
 
   <div class="navs">
     <ul class="menus mg-ctr">
-      <li><a title="ICABST2019首页" href="/cn">ICABST</a></li>
-      <li><a title="ICABST2019大会详情" href="/cn/about">大会详情</a></li>
-      <li><a title="ICABST2019组织机构" href="/cn/organization">组织机构</a></li>
-      <li><a title="ICABST2019特邀嘉宾" href="/cn/speakers">参会嘉宾</a></li>
-      <li><a title="ICABST2019会议日程" href="/cn/program">会议日程</a></li>
-      <li><a title="ICABST2019大会征文" href="/cn/cfp">大会征文</a></li>
-      <li><a title="ICABST2019参会注册" href="/cn/registration">参会注册</a></li>
-      <li><a title="ICABST2019会议地点" href="/cn/venue">会议地点</a></li>
-  		<li><a title="ICABST2019英文版" href="/">English</a></li>
+      <li><a title="ICABST2019首页" href="/2019cn">ICABST</a></li>
+      <li><a title="ICABST2019大会详情" href="/2019cn/about">大会详情</a></li>
+      <li><a title="ICABST2019组织机构" href="/2019cn/organization">组织机构</a></li>
+      <li><a title="ICABST2019特邀嘉宾" href="/2019cn/speakers">参会嘉宾</a></li>
+      <li><a title="ICABST2019会议日程" href="/2019cn/program">会议日程</a></li>
+      <li><a title="ICABST2019大会征文" href="/2019cn/cfp">大会征文</a></li>
+      <li><a title="ICABST2019参会注册" href="/2019cn/registration">参会注册</a></li>
+      <li><a title="ICABST2019会议地点" href="/2019cn/venue">会议地点</a></li>
+  		<li><a title="ICABST2019英文版" href="/2019">English</a></li>
     </ul>
   </div>
   
@@ -89,11 +89,11 @@ var _hmt = _hmt || [];
             <p>&nbsp;&nbsp;&nbsp;&nbsp;2019国际前沿生物科学与技术学术会议（ICABST2019）在会议筹备期间，多个出版方提供版面支持，经由我方审核通过的论文，均可安排至相应期刊发表。现面向国内外学者征收相关领域论文，<strong>如您有意向发表SCI、EI期刊论文（非会议论文，正刊版面）及EI、ISTP（CPCI-S）检索的会议论文，</strong>请尽早完成初稿的提交。
             </p>
 						<p>
-						<a href="/cn/sci1" target="_blank" style="color: #102cf7"><u>SCI正刊征文1----生物、材料、分子生物相关领域</u></a><br/>
-						<a href="/cn/sci2" target="_blank" style="color: #102cf7"><u>SCI正刊征文2----农业科学、动植物科学、兽医学、水产、养殖等相关领域</u></a><br/>
-						<a href="/cn/sci3" target="_blank" style="color: #102cf7"><u>SCI正刊征文3----生物医学、药学等相关领域</u></a><br/>
-						<a href="/cn/sciabstract" target="_blank" style="color: #102cf7"><u>SCI摘要专题发表--中科院三区，影响因子2以上，JCR二区</u></a><br/>
-						<a href="/cn/cpci" target="_blank" style="color: #102cf7"><u>EI/CPCI检索会议论文征文通知</u></a><br/>
+						<a href="/2019cn/sci1" target="_blank" style="color: #102cf7"><u>SCI正刊征文1----生物、材料、分子生物相关领域</u></a><br/>
+						<a href="/2019cn/sci2" target="_blank" style="color: #102cf7"><u>SCI正刊征文2----农业科学、动植物科学、兽医学、水产、养殖等相关领域</u></a><br/>
+						<a href="/2019cn/sci3" target="_blank" style="color: #102cf7"><u>SCI正刊征文3----生物医学、药学等相关领域</u></a><br/>
+						<a href="/2019cn/sciabstract" target="_blank" style="color: #102cf7"><u>SCI摘要专题发表--中科院三区，影响因子2以上，JCR二区</u></a><br/>
+						<a href="/2019cn/cpci" target="_blank" style="color: #102cf7"><u>EI/CPCI检索会议论文征文通知</u></a><br/>
 
           </div>
 					<div class="mb-10">
@@ -142,7 +142,7 @@ var _hmt = _hmt || [];
           <div class="mb-10">
             <strong>二、投稿方式</strong>
 						<div class="pl-23">
-            <p>1. <a class="pointer" href="/cn/article" target="_blank" style="color: #102cf7"><u><strong>点击进入在线投稿链接(初始文档需小于10MB)</strong></u></a><br/>
+            <p>1. <a class="pointer" href="/2019cn/article" target="_blank" style="color: #102cf7"><u><strong>点击进入在线投稿链接(初始文档需小于10MB)</strong></u></a><br/>
               2. 直接将文章发至投稿邮箱editor@apanse.com, 并留言告知您的电话、发表需求等必要信息
             </p>
 						</div>
@@ -210,9 +210,9 @@ var _hmt = _hmt || [];
     <div class="page_right col-4-1 fr mr-25">
 			<div class="; lh-80" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
 			  <ul>
-			    <li><a class="pointer" href="/cn/submit" target="_blank"><img src="../img/conference2.png" height="68px"></a></li>
-					<li><a class="pointer" href="/cn/article" target="_blank"><img src="../img/conferencearticle2.png" height="68px"></a></li>
-					<li><a class="pointer" href="/cn/article" target="_blank"><img src="../img/journalarticle2.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/2019cn/submit" target="_blank"><img src="../img/conference2.png" height="68px"></a></li>
+					<li><a class="pointer" href="/2019cn/article" target="_blank"><img src="../img/conferencearticle2.png" height="68px"></a></li>
+					<li><a class="pointer" href="/2019cn/article" target="_blank"><img src="../img/journalarticle2.png" height="68px"></a></li>
 			    <div class="clear"></div>
 			  </ul>
 			</div>
