--- a/src/main/resources/templates/page/2019/cn/registration.html
+++ b/src/main/resources/templates/page/2019/cn/registration.html
@@ -60,15 +60,15 @@ var _hmt = _hmt || [];
 
   <div class="navs">
     <ul class="menus mg-ctr">
-      <li><a title="ICABST2019首页" href="/cn">ICABST</a></li>
-      <li><a title="ICABST2019大会详情" href="/cn/about">大会详情</a></li>
-      <li><a title="ICABST2019组织机构" href="/cn/organization">组织机构</a></li>
-      <li><a title="ICABST2019特邀嘉宾" href="/cn/speakers">参会嘉宾</a></li>
-      <li><a title="ICABST2019会议日程" href="/cn/program">会议日程</a></li>
-      <li><a title="ICABST2019大会征文" href="/cn/cfp">大会征文</a></li>
-      <li><a title="ICABST2019参会注册" href="/cn/registration">参会注册</a></li>
-      <li><a title="ICABST2019会议地点" href="/cn/venue">会议地点</a></li>
-  		<li><a title="ICABST2019英文版" href="/">English</a></li>
+      <li><a title="ICABST2019首页" href="/2019cn">ICABST</a></li>
+      <li><a title="ICABST2019大会详情" href="/2019cn/about">大会详情</a></li>
+      <li><a title="ICABST2019组织机构" href="/2019cn/organization">组织机构</a></li>
+      <li><a title="ICABST2019特邀嘉宾" href="/2019cn/speakers">参会嘉宾</a></li>
+      <li><a title="ICABST2019会议日程" href="/2019cn/program">会议日程</a></li>
+      <li><a title="ICABST2019大会征文" href="/2019cn/cfp">大会征文</a></li>
+      <li><a title="ICABST2019参会注册" href="/2019cn/registration">参会注册</a></li>
+      <li><a title="ICABST2019会议地点" href="/2019cn/venue">会议地点</a></li>
+  		<li><a title="ICABST2019英文版" href="/2019">English</a></li>
     </ul>
   </div>
     
@@ -88,10 +88,10 @@ var _hmt = _hmt || [];
           <strong>注册步骤：</strong>
         </p>
         <p>
-          1. <a class="pointer" href="/cn/submit" target="_blank" style="color: #102cf7"><u><strong>通过在线报名页面提交参会信息(初始文档需小于10MB)</strong></u></a>，并选择参会类型
+          1. <a class="pointer" href="/2019cn/submit" target="_blank" style="color: #102cf7"><u><strong>通过在线报名页面提交参会信息(初始文档需小于10MB)</strong></u></a>，并选择参会类型
         </p>
 				<p>
-					2. 如在线提交失败，可下载并填写<a class="pointer" href="/cn/download/ICABST-Registration-Form-cn.xlsx" target="_blank" style="color: #102cf7"><u>参会说明表</u></a>，完成后同会议摘要（听众无需摘要）一并发至会务邮箱icabst@apanse.com
+					2. 如在线提交失败，可下载并填写<a class="pointer" href="/cn/download/ICABST-Registration-Form-cn2019.xlsx" target="_blank" style="color: #102cf7"><u>参会说明表</u></a>，完成后同会议摘要（听众无需摘要）一并发至会务邮箱icabst@apanse.com
 				</p>
         <p>
           3. 我方会在一周内与您核对相关信息并提供相关材料（如会议通知、录用函等）
@@ -185,9 +185,9 @@ var _hmt = _hmt || [];
     <div class="page_right col-4-1 fr mr-25">
 			<div class="; lh-80" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
 			  <ul>
-			    <li><a class="pointer" href="/cn/submit" target="_blank"><img src="../img/conference2.png" height="68px"></a></li>
-					<li><a class="pointer" href="/cn/article" target="_blank"><img src="../img/conferencearticle2.png" height="68px"></a></li>
-					<li><a class="pointer" href="/cn/article" target="_blank"><img src="../img/journalarticle2.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/2019cn/submit" target="_blank"><img src="../img/conference2.png" height="68px"></a></li>
+					<li><a class="pointer" href="/2019cn/article" target="_blank"><img src="../img/conferencearticle2.png" height="68px"></a></li>
+					<li><a class="pointer" href="/2019cn/article" target="_blank"><img src="../img/journalarticle2.png" height="68px"></a></li>
 			    <div class="clear"></div>
 			  </ul>
 			</div>
