--- a/src/main/resources/templates/page/2019/cn/submit.html
+++ b/src/main/resources/templates/page/2019/cn/submit.html
@@ -60,15 +60,15 @@ var _hmt = _hmt || [];
 
     <div class="navs">
       <ul class="menus mg-ctr">
-        <li><a title="ICABST2019首页" href="/cn">ICABST</a></li>
-        <li><a title="ICABST2019大会详情" href="/cn/about">大会详情</a></li>
-        <li><a title="ICABST2019组织机构" href="/cn/organization">组织机构</a></li>
-        <li><a title="ICABST2019特邀嘉宾" href="/cn/speakers">参会嘉宾</a></li>
-        <li><a title="ICABST2019会议日程" href="/cn/program">会议日程</a></li>
-        <li><a title="ICABST2019大会征文" href="/cn/cfp">大会征文</a></li>
-        <li><a title="ICABST2019参会注册" href="/cn/registration">参会注册</a></li>
-        <li><a title="ICABST2019会议地点" href="/cn/venue">会议地点</a></li>
-    	<li><a title="ICABST2019英文版" href="/">English</a></li>
+        <li><a title="ICABST2019首页" href="/2019cn">ICABST</a></li>
+        <li><a title="ICABST2019大会详情" href="/2019cn/about">大会详情</a></li>
+        <li><a title="ICABST2019组织机构" href="/2019cn/organization">组织机构</a></li>
+        <li><a title="ICABST2019特邀嘉宾" href="/2019cn/speakers">参会嘉宾</a></li>
+        <li><a title="ICABST2019会议日程" href="/2019cn/program">会议日程</a></li>
+        <li><a title="ICABST2019大会征文" href="/2019cn/cfp">大会征文</a></li>
+        <li><a title="ICABST2019参会注册" href="/2019cn/registration">参会注册</a></li>
+        <li><a title="ICABST2019会议地点" href="/2019cn/venue">会议地点</a></li>
+    	<li><a title="ICABST2019英文版" href="/2019">English</a></li>
       </ul>
     </div>
         
@@ -82,7 +82,7 @@ var _hmt = _hmt || [];
             <div class="public_p pb-20 pl-30">
                     <p>1. 所有学者提交的参会信息都将做保密处理</p>
                     <p>2. 通过如下表格在线提交参会信息完成预注册</p>
-                    <p>3. 如在线提交失败，可下载并填写<a class="pointer" href="/cn/download/ICABST-Registration-Form-cn.xlsx" target="_blank" style="color: #102cf7"><u>参会说明表</u></a>，完成后同会议摘要（听众无需摘要）一并发至会务邮箱icabst@apanse.com</p>
+                    <p>3. 如在线提交失败，可下载并填写<a class="pointer" href="/cn/download/ICABST-Registration-Form-cn2019.xlsx" target="_blank" style="color: #102cf7"><u>参会说明表</u></a>，完成后同会议摘要（听众无需摘要）一并发至会务邮箱icabst@apanse.com</p>
                     <p>4. 在提交成功后，大会将在1-2个工作日内为您反馈相关信息</p>
             </div>
             <div class="background4" style="padding-left:55px; padding-bottom: 10px;">在线提交</div>
@@ -356,9 +356,9 @@ var _hmt = _hmt || [];
     <div class="page_right col-4-1 fr mr-25">
 			<div class="; lh-80" style="border-bottom: 2px dashed; border-color: #c3bfbf; padding: 10px;">
 			  <ul>
-			    <li><a class="pointer" href="/cn/submit" target="_blank"><img src="../img/conference2.png" height="68px"></a></li>
-					<li><a class="pointer" href="/cn/article" target="_blank"><img src="../img/conferencearticle2.png" height="68px"></a></li>
-					<li><a class="pointer" href="/cn/article" target="_blank"><img src="../img/journalarticle2.png" height="68px"></a></li>
+			    <li><a class="pointer" href="/2019cn/submit" target="_blank"><img src="../img/conference2.png" height="68px"></a></li>
+					<li><a class="pointer" href="/2019cn/article" target="_blank"><img src="../img/conferencearticle2.png" height="68px"></a></li>
+					<li><a class="pointer" href="/2019cn/article" target="_blank"><img src="../img/journalarticle2.png" height="68px"></a></li>
 			    <div class="clear"></div>
 			  </ul>
 			</div>
