--- a/src/main/resources/templates/page/2019/cn/venue.html
+++ b/src/main/resources/templates/page/2019/cn/venue.html
@@ -60,15 +60,15 @@ var _hmt = _hmt || [];
 
   <div class="navs">
     <ul class="menus mg-ctr">
-      <li><a title="ICABST2019首页" href="/cn">ICABST</a></li>
-      <li><a title="ICABST2019大会详情" href="/cn/about">大会详情</a></li>
-      <li><a title="ICABST2019组织机构" href="/cn/organization">组织机构</a></li>
-      <li><a title="ICABST2019特邀嘉宾" href="/cn/speakers">参会嘉宾</a></li>
-      <li><a title="ICABST2019会议日程" href="/cn/program">会议日程</a></li>
-      <li><a title="ICABST2019大会征文" href="/cn/cfp">大会征文</a></li>
-      <li><a title="ICABST2019参会注册" href="/cn/registration">参会注册</a></li>
-      <li><a title="ICABST2019会议地点" href="/cn/venue">会议地点</a></li>
-  		<li><a title="ICABST2019英文版" href="/">English</a></li>
+      <li><a title="ICABST2019首页" href="/2019cn">ICABST</a></li>
+      <li><a title="ICABST2019大会详情" href="/2019cn/about">大会详情</a></li>
+      <li><a title="ICABST2019组织机构" href="/2019cn/organization">组织机构</a></li>
+      <li><a title="ICABST2019特邀嘉宾" href="/2019cn/speakers">参会嘉宾</a></li>
+      <li><a title="ICABST2019会议日程" href="/2019cn/program">会议日程</a></li>
+      <li><a title="ICABST2019大会征文" href="/2019cn/cfp">大会征文</a></li>
+      <li><a title="ICABST2019参会注册" href="/2019cn/registration">参会注册</a></li>
+      <li><a title="ICABST2019会议地点" href="/2019cn/venue">会议地点</a></li>
+  		<li><a title="ICABST2019英文版" href="/2019">English</a></li>
     </ul>
   </div>
   
